--- a/web-scraping/package.json
+++ b/web-scraping/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "puppeteer": "^18.1.0",
+    "latest": "^0.2.0",
+    "node": "^19.4.0",
+    "puppeteer": "^18.2.1",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
