--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,7 +13,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "latest": "^0.2.0",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "node": "^19.4.0",
+    "puppeteer": "^18.2.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
