--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,10 +1,10 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,11 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "node": "^19.4.0",
+    "pg": "^8.8.0",
     "puppeteer": "^18.2.1",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
