--- a/back-end/config.env
+++ b/back-end/config.env
@@ -1,2 +1,2 @@
-ATLAS_URI = mongodb+srv://AdaAletteElena:lLcBqQCcMs8WEDM2@cluster0.85vd6vd.mongodb.net/?retryWrites=true&w=majority
-PORT = https://backend-hackthon.herokuapp.com/
+MONGODB_URI = mongodb+srv://AdaAletteElena:lLcBqQCcMs8WEDM2@cluster0.85vd6vd.mongodb.net/?retryWrites=true&w=majority
+PORT = 27017
