local backend code

--- a/back-end/config.env
+++ b/back-end/config.env
@@ -1,2 +1,2 @@
-MONGODB_URI = mongodb+srv://AdaAletteElena:lLcBqQCcMs8WEDM2@cluster0.85vd6vd.mongodb.net/?retryWrites=true&w=majority
-PORT = 27017
+ATLAS_URI = mongodb+srv://AdaAletteElena:lLcBqQCcMs8WEDM2@cluster0.85vd6vd.mongodb.net/?retryWrites=true&w=majority
+PORT = 5001
